# soft-typing-PHP5

./: .gitignore  Makefile  README  README.html  analyses.cabal  example.dot  input.php  run  runsglri  visualize
doc/: report.tex
src/: Analysis.hs  Checker.hs  Debugger.hs  Main.hs  Printer.hs  Simplifier.hs  Tester.hs  Typer.hs  Visualizer.hs  WebApp.hs
src/MF/: Context.hs  Core.hs
src/MF/Core/: Context.hs  Flowable.hs  Lattice.hs  Solver.hs
src/WebApp/: WebApp.hs
src/WebApp/css/: webapp.css
src/WebApp/js/: script.js
src/grammar/: PHP5.def  PHP5.tbl
tests/: assign.php  assignop.php  circumference.php  comment.php  conditional.php  efficientswap.php  heredoc.php  include.php  indirectrefvar.php  nowdoc.php  plusassign.php  postinc.php  preposdecrement.php  preposincrement.php  print.php  simple.php  test.php
tests/basicdatatypes/: gettype.php  null.php  typejuggling.php
tests/controlstruct/: conditional.php  dowhile.php  dowhilebreak.php  elseif.php  for.php  foreach.php  goto.php  if.php  ifelse.php  ifelsealt.php  switch.php  ternaryconditionalop.php  while.php  while3.php  whilebreak.php  whilecontinue.php
tests/exceptions/: exception.php  nestedexception.php
tests/functions/: closure.php  countTo10.php  dynamicfun.php  dynamicfun2.php  efficientswap.php  fac.php  funconditional.php  fundefaultpar.php  funfun.php  funtakesarray.php  funvar.php  id.php  id2.php  mapvariablefun.php  recursive.php  recursive2.php  simple.php  simplewitharg.php
tests/oo/: variablemethod.php
tests/syntax/: advancedescaping.php  htmlembedding.php  instructionseparation.php  phptagasp.php  phptagcombination.php  phptagecho.php  phptagscript.php  phptagsimple.php  phptagstandard.php
tests/variables/: constantvar.php  constantvar2.php  constantvar3.php  indirectrefvar.php  varreference.php
tests/variablescope/: globals.php  globals6.php
tests/varmanage/: unset.php
tests/varscope/: global.php  globals4.php  staticdeclaration.php
(+57 files in other folders)
