Name:               analyses
Version:            2.0
Cabal-Version:      >= 1.2
Author:             Henk-Erik van der Hoek, Marcelo Sousa
Synopsis:           Soft Typing for PHP5
Description:        Soft Typing for PHP5
Build-Type:         Simple


Executable php5analysis
    Main-Is:          Main.hs
    Build-Depends:    base          >= 4 && < 5
                    , containers    >= 0.2
                    , filepath
                    , uu-parsinglib >= 2.7.1
                    , mtl           >= 1.1.0.2
                    , fgl           >= 5.4.2.3
                    , cco           >= 0.0.4
                    , cmdargs
                    , process
    Hs-Source-Dirs:   src/
    Extensions: 	  TypeOperators, FlexibleInstances, TypeSynonymInstances, DeriveDataTypeable
                                                                  
Executable php5analysis_tester                                                    
    Main-Is:          Tester.hs                                             
    Build-Depends:    base          >= 4 && < 5                             
                    , containers    >= 0.2                                  
                    , filepath                                              
                    , uu-parsinglib >= 2.7.1                                
                    , mtl           >= 1.1.0.2                              
                    , fgl           >= 5.4.2.3                              
                    , cco           >= 0.0.4                                
                    , directory     >= 1.0.1.1                              
                    , process       >= 1.0.1.3                              
    Hs-Source-Dirs:   src/                                                  
    Extensions: 	  TypeOperators, FlexibleInstances, TypeSynonymInstances